<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.home.list.TvShowListFragment">

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/srl_tv_show_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_tv_show_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:listitem="@layout/row_main_movies"
        android:paddingTop="4dp"
        android:paddingBottom="4dp"
        android:clipToPadding="false"
        />

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    <TextView
        android:id="@+id/tv_no_internet"
        style="@style/TextAppearance.AppCompat.Title"
        android:layout_gravity="center"
        android:text="@string/no_internet_connection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />

</FrameLayout>